# xinr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: README.md  XGC_DESIGN.md
docs/adr/: 001-xgc-architecture.md  002-region-based-memory.md  003-colored-pointers.md  004-load-barriers.md  005-mark-state.md  006-relocation.md  007-no-std-design.md  008-latency-placement-adaptive.md  009-sync-primitives.md  010-rwlock-and-timer.md  011-waker-and-scheduler.md  012-lint-and-format-compliance.md  013-memory-safe-single-core.md  014-benchmark-macro.md  015-error-classification.md  016-try-join-all.md  017-select-send-macro.md
docs/api/: sync.md  xgc.md
examples/: basic_gc.rs  cache_demo.rs  channel_demo.rs  full_pipeline.rs  gc_relocate_bench.rs  gc_worker.rs  metrics_report.rs  pingpong.rs  producer_consumer.rs  scheduler_demo.rs  select_demo.rs  select_send_demo.rs  shutdown_coord.rs  slab_demo.rs
src/: error.rs  lib.rs
src/bench/: mod.rs
src/sync/: barrier.rs  blocking.rs  cache_padded.rs  condvar.rs  join_all.rs  metrics.rs  mod.rs  notify.rs  oneshot.rs  scheduler.rs  scope.rs  select.rs  select_macro.rs  semaphore.rs  spsc.rs  timed_join.rs  timer.rs  waitgroup.rs  waker.rs
src/sync/channel/: mod.rs  ring.rs
src/sync/fiber/: mod.rs  stack.rs  state.rs
src/sync/parking/: lot.rs  mod.rs  permit.rs
src/sync/rwlock/: guard.rs  mod.rs  state.rs
src/tests/: mod.rs
src/tests/bench/: hotpath.rs  mod.rs
src/tests/sync/: mod.rs
src/xgc/: mod.rs
src/xgc/log/: mod.rs  (+2 more)
(+161 files in other folders)
