[package]
name = "xinr"
version = "0.1.0"
edition = "2024"
description = "Xin language runtime: XGC garbage collector and runtime primitives"
authors = ["Xin Team"]
license = "MIT OR Apache-2.0"

[dependencies]
portable-atomic = { version = "1.6", default-features = false }
cfg-if = { version = "1.0", default-features = false }

[features]
default = []
std = []
alloc = []
no-std = []
